fix(review): questions no longer spill over the footer, plus scrollbars will now be hidden

--- a/Client/login-page.css
+++ b/Client/login-page.css
@@ -341,7 +341,12 @@ li {
     margin-top: 10px;
 }
 
-wrapper {
+#wrapper {
+    max-height: 500px;
     overflow-y: scroll;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
